<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_yesterday"
            android:title="Yesterday Restaurant" />
        <item
            android:id="@+id/nav_tomorrow"
            android:title="Tomorrow Voting" />
        <item
            android:id="@+id/nav_username"
            android:title="Change Username" />
    </group>
</menu>
